--- a/MeetingPlatformUI/style.css
+++ b/MeetingPlatformUI/style.css
@@ -158,3 +158,149 @@ body {
     bottom: 12px;
     left: 33%;
 }
+
+.main .controls {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 22px;
+}
+
+.main .controls i {
+    font-size: 24px;
+    color: #67707e;
+    background: #fff;
+    border-radius: 50%;
+    padding: 12px 13px;
+    cursor: pointer;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+}
+
+.main .controls button{
+    font-size: 15px;
+    border: none;
+    background: #eb3d4b;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.main .controls i.red{
+    color: #fff;
+    background-color: #eb3d4b;
+    transition: all 0.3s ease;
+}
+
+.main .controls button:hover,
+.main .controls i.red:hover {
+    background-color: #ec0918;
+}
+
+
+/* Aside */
+
+.right-section{
+    width: 30%;
+    background-color: #f8fafc;
+    border-radius: 20px;
+    padding: 24px;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.1);
+}
+
+.right-section >h3 {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.right-section > p{
+    font-size: 12px;
+    text-align: center;
+    color: #818a98;
+}
+
+.right-section .messages{
+    margin: 30px 0 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    height: 78%;
+}
+.right-section .messages .item{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.right-section .messages .item .info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 4px;
+}
+
+.right-section .messages .item .info h5{
+    color: #1263dd;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.right-section .messages .item .info p{
+    color: #b9bec6;
+    font-size: 11px;
+}
+.right-section .messages .item img{
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+}
+
+.right-section .messages .item .text {
+    width: 100%;
+    background: #fff;
+    padding: 8 px;
+    border-radius: 6px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+}
+
+.right-section .messages .item .text > p{
+    font-size: 13px;
+}
+
+.right-section .send {
+    background: #fff;
+    padding: 12px 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+}
+
+.right-section .send input{
+    flex: 1;
+    border: none;
+    outline: none;
+}
+
+.right-section .send i{
+    font-size: 26px;
+    color: #fff;
+    padding: 4px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.right-section .send i.stickerIcon {
+    background: #e2a60e;
+}
+
+.right-section .send i.sendIcon {
+    background-color: #1263dd;
+    font-size: 22px;
+    padding: 6px;
+}
+
+
